Changed width to fix error with spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -100,16 +100,14 @@ a:hover {
 
 
 */
-#mainPage {
-    /* display: none; */
-}
+
 body {
     display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
     width: 90vw;
-    height: 90vh;
+    height: auto;
     margin: 0 5vw;
 }
 
@@ -124,7 +122,7 @@ body::-webkit-scrollbar {
 #title {
     position: relative;
     width: 20vw;
-    margin: 0 35vw;
+    margin: 20vh 35vw 0 35vw;
 
     display: flex;
     flex-direction: row;
@@ -219,7 +217,7 @@ hr {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 10vh 35vw 0 35vw;
+    margin: 5vh 35vw 0 35vw;
 }
 
 .projLink {
@@ -290,7 +288,7 @@ hr {
 }
 
 .projectPage {
-    margin-top: 5rem;
+    margin-top: 4rem;
     position: relative;
     align-content: center;
 }
@@ -351,7 +349,6 @@ hr {
 
 .aboutPage {
     display: flex;
-    margin-top: 20%;
 }
 
 
